Tools/MiniBrowser/win/WinMain.cpp
@@ -58,7 +58,7 @@ int WINAPI wWinMain(_In_ HINSTANCE hInstance, _In_opt_ HINSTANCE hPrevInstance, 
 #endif
 
     MSG msg { };
-    HACCEL hAccelTable;
+    HACCEL hAccelTable, hPreAccelTable;
 
     INITCOMMONCONTROLSEX InitCtrlEx;
 
@@ -94,6 +94,7 @@ int WINAPI wWinMain(_In_ HINSTANCE hInstance, _In_opt_ HINSTANCE hPrevInstance, 
     ShowWindow(mainWindow.hwnd(), nCmdShow);
 
     hAccelTable = LoadAccelerators(hInst, MAKEINTRESOURCE(IDC_MINIBROWSER));
+    hPreAccelTable = LoadAccelerators(hInst, MAKEINTRESOURCE(IDR_ACCELERATORS_PRE));
 
     if (options.requestedURL.length())
         mainWindow.loadURL(options.requestedURL.GetBSTR());
@@ -104,25 +105,20 @@ int WINAPI wWinMain(_In_ HINSTANCE hInstance, _In_opt_ HINSTANCE hPrevInstance, 
 
     // Main message loop:
     __try {
-#if ENABLE(WEBKIT)
         while (GetMessage(&msg, nullptr, 0, 0)) {
 #if USE(CF)
             CFRunLoopRunInMode(kCFRunLoopDefaultMode, 0, true);
 #endif
-            if (!TranslateAccelerator(msg.hwnd, hAccelTable, &msg)) {
+            if (TranslateAccelerator(msg.hwnd, hPreAccelTable, &msg))
+                continue;
+            bool processed = false;
+            if (MainWindow::isInstance(msg.hwnd))
+                processed = TranslateAccelerator(msg.hwnd, hAccelTable, &msg);
+            if (!processed) {
                 TranslateMessage(&msg);
                 DispatchMessage(&msg);
             }
         }
-#else
-        IWebKitMessageLoopPtr messageLoop;
-
-        hr = WebKitCreateInstance(CLSID_WebKitMessageLoop, 0, IID_IWebKitMessageLoop, reinterpret_cast<void**>(&messageLoop.GetInterfacePtr()));
-        if (FAILED(hr))
-            goto exit;
-
-        messageLoop->run(hAccelTable);
-#endif
     } __except(createCrashReport(GetExceptionInformation()), EXCEPTION_EXECUTE_HANDLER) { }
 
 exit:
